--- a/Quiz_ps2/app/src/main/res/values/strings.xml
+++ b/Quiz_ps2/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="promptButton">Answer</string>
+    <string name="answerWasShown">Answer already shown</string>
 
 
 </resources>
